--- a/proyectoEva1/templates/index.html
+++ b/proyectoEva1/templates/index.html
@@ -8,9 +8,9 @@
 
 <body>
     <h1>Bienvenido a Mi Página</h1>
+    <!----lista img-->>
     <li><a href="proyectoEva1\static\imaganes\i1.jpg"></a></li>
     <li><a href="proyectoEva1\static\imaganes\i2.jpg"></a></li>
     <li><a href="proyectoEva1\static\imaganes\i3.jpg"></a></li>
-    
 </body>
 </html>
