--- a/proyectoEva1/templates/peliculas.html
+++ b/proyectoEva1/templates/peliculas.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="proyectoEva1\templates\index.html">
+    {%%}
     <title>Peliculas</title>
 </head>
 <body>
